# 3mf_bambu2prusa

./: README.md  bambu_to_prusa_gui.py  bambu_to_prusa_xml.py  pyproject.toml
.github/workflows/: ci.yml
bambu_to_prusa/: __init__.py  cloud_storage.py  converter.py  file_ops.py  model_injection.py  model_processing.py  package_builder.py  settings.py  template_paths.py
bambu_to_prusa/data/: __init__.py
frontends/: __init__.py
frontends/cli/: __init__.py  main.py
frontends/common/: __init__.py  helpers.py
frontends/pyqt6/: __init__.py  main.py
frontends/tkinter/: __init__.py  main.py
scripts/: setup.py
tests/: conftest.py  test_cloud_storage.py  test_converter.py  test_gui_helpers.py  test_model_injection.py  test_model_processing.py  test_settings.py
